--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ input, textarea, button, select {
     font: inherit;
 }
 
-/* Google Fonts */
+/* Google Fonts (Roboto) */
 
 @font-face {
     font-family: 'Roboto';
@@ -33,16 +33,16 @@ input, textarea, button, select {
 
 @font-face {
     font-family: 'Roboto';
-    font-weight: 300;
-    src: url('fonts/roboto-light-webfont.woff2') format('woff2'),
-         url('fonts/roboto-light-webfont.woff') format('woff');
+    font-weight: 100;
+    src: url('fonts/roboto-thin-webfont.woff2') format('woff2'),
+         url('fonts/roboto-thin-webfont.woff') format('woff');
 }
 
 @font-face {
     font-family: 'Roboto';
-    font-weight: 100;
-    src: url('fonts/roboto-thin-webfont.woff2') format('woff2'),
-         url('fonts/roboto-thin-webfont.woff') format('woff');
+    font-weight: 300;
+    src: url('fonts/roboto-light-webfont.woff2') format('woff2'),
+         url('fonts/roboto-light-webfont.woff') format('woff');
 }
 
 @font-face {
@@ -67,5 +67,52 @@ input, textarea, button, select {
 }
 
 
+/* Dashboard Styles */
 
+body {
+    font-family: 'Roboto', Arial, sans-serif;
+    height: 100%;
+}
 
+ul {
+    list-style: none;
+}
+
+.container {
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+}
+
+.sidebar {
+    grid-row: 1/3;
+    color: #ffffff;
+    background-color: #1992d4;
+}
+
+.header {
+    grid-column: 2/3;
+    display: grid;
+    grid-template-columns: 6fr 4fr;
+}
+
+.main {
+    grid-column: 2/3;
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+}
+
+.main .projects {
+    grid-row: 1/3;
+}
+
+.card-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 15px;
+    margin: 1rem;
+}
+
+.card {
+    height: 200px;
+    border: 1px solid black;
+}
