--- a/styles.css
+++ b/styles.css
@@ -87,6 +87,24 @@ ul {
     grid-row: 1/3;
     color: #ffffff;
     background-color: #1992d4;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    position: sticky;
+    top: 0;
+    height: 100vh;
+    gap: 45px;
+    padding: 1rem 2rem;
+}
+
+.sidebar ul {
+    font-weight: 500;
+    font-size: 18px;
+}
+
+.sidebar li:not(:last-child) {
+    margin-bottom: 1rem;
 }
 
 .header {
@@ -113,6 +131,6 @@ ul {
 }
 
 .card {
-    height: 200px;
+    height: 175px;
     border: 1px solid black;
 }
