--- a/styles.css
+++ b/styles.css
@@ -103,6 +103,10 @@ ul {
     font-size: 18px;
 }
 
+.sidebar li span {
+    margin-left: 0.75rem;
+}
+
 .sidebar li:not(:last-child) {
     margin-bottom: 1rem;
 }
@@ -110,13 +114,105 @@ ul {
 .header {
     grid-column: 2/3;
     display: grid;
-    grid-template-columns: 6fr 4fr;
+    grid-template-columns: 2fr 1fr;
+    gap: 8px;
+    padding: 1rem 2rem;
+    box-shadow: 0px .25rem 5px rgba(0, 0, 0, 20%);
+}
+
+.search {
+    display: flex;
+    align-items: center;
+    padding: 0 16px;
+    gap: .75rem;
+}
+
+.search input {
+    background-color: #E2E8F0;
+    border-radius: 20px;
+    border-style: none;
+    height: 47.5%;
+    width: 100%;
+    padding: 12px;
+}
+
+.account {
+    align-self: center;
+    justify-self: flex-end;
+    display: grid;
+    grid-template-columns: 2fr 4fr 4fr;
+    gap: 1.25rem;
+    text-align: center;
+    vertical-align: middle;
+    justify-items: center;
+    align-items: center;
+    padding-right: 25px;
+    height: 100%;
+}
+
+.account i {
+    font-size: 1.2rem;
+}
+
+.account span {
+    font-weight: 700;
+}
+
+.welcome {
+    align-self: center;
+    justify-self: flex-start;
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    vertical-align: middle;
+    justify-items: center;
+    align-items: center;
+    gap: .75rem;
+    padding-left: 16px;
+    height: 100%;
+}
+
+.welcome .avatar {
+    height: 60px;
+    width: 60px;
+}
+
+.user-greeting #greeting {
+    font-size: 14px;
+    font-weight: 700;
+}
+
+.user-greeting #user {
+    font-size: 25px;
+    font-weight: 700;
+}
+
+.make-post {
+    align-self: center;
+    justify-self: flex-end;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-items: center;
+    align-items: center;
+    gap: 1rem;
+    padding-right: 25px;
+    height: 100%;
+}
+
+.make-post button {
+    padding: 0.5rem 1.5rem;
+    font-weight: 500;
+    font-size: 14px;
+    border-style: none;
+    color: #ffffff;
+    background-color: #1992d4;
+    border-radius: 35px;
 }
 
 .main {
     grid-column: 2/3;
     display: grid;
     grid-template-columns: 3fr 1fr;
+    background-color: #E2E8F0;
 }
 
 .main .projects {
@@ -133,4 +229,13 @@ ul {
 .card {
     height: 175px;
     border: 1px solid black;
+}
+
+/* Profile Picture Styling */
+
+.avatar {
+    vertical-align: middle;
+    height: 45px;
+    width: 45px;
+    border-radius: 50%;
 }
