--- a/styles.css
+++ b/styles.css
@@ -116,7 +116,7 @@ ul {
     display: grid;
     grid-template-columns: 2fr 1fr;
     gap: 8px;
-    padding: 1rem 2rem;
+    padding: 0.75rem 2rem;
     box-shadow: 0px .25rem 5px rgba(0, 0, 0, 20%);
 }
 
@@ -168,12 +168,12 @@ ul {
     align-items: center;
     gap: .75rem;
     padding-left: 16px;
-    height: 100%;
 }
 
 .welcome .avatar {
     height: 60px;
     width: 60px;
+    min-width: 60px;
 }
 
 .user-greeting #greeting {
@@ -213,6 +213,7 @@ ul {
     display: grid;
     grid-template-columns: 3fr 1fr;
     background-color: #E2E8F0;
+    padding: 1.2rem 1rem;
 }
 
 .main .projects {
@@ -222,14 +223,36 @@ ul {
 .card-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 15px;
-    margin: 1rem;
+    gap: 20px;
+    margin: .5rem 1.25rem 1rem 0;
 }
 
 .card {
     height: 175px;
-    border: 1px solid black;
+    border-style: none;
+    border-left: 8px solid #F0B429;
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding: 1rem 0.8rem 1rem 1rem;
+    gap: 8px;
+    background-color: #ffffff;
 }
+
+.card .description p {
+    font-weight: 400;
+    font-size: 14px;
+    color: #969696;
+}
+
+.card .card-icons{
+    display: flex;
+    justify-content: flex-end;
+    gap: 1.5rem;
+    margin-right: 1rem;
+}
+
 
 /* Profile Picture Styling */
 
