--- a/styles.css
+++ b/styles.css
@@ -95,7 +95,11 @@ ul {
     top: 0;
     height: 100vh;
     gap: 45px;
-    padding: 1rem 2rem;
+    padding: 1rem 1.75rem;
+}
+    
+.sidebar h1 i {
+    margin-right: 4px;
 }
 
 .sidebar ul {
@@ -212,6 +216,7 @@ ul {
     grid-column: 2/3;
     display: grid;
     grid-template-columns: 3fr 1fr;
+    grid-template-rows: none;
     background-color: #E2E8F0;
     padding: 1.2rem 1rem;
 }
@@ -253,13 +258,18 @@ ul {
     margin-right: 1rem;
 }
 
+.sidecontent {
+    display: flex;
+    flex-direction: column;
+}
+
 .announcement-container {
     background-color: #ffffff;
     border-style: none;
     border-radius: 8px;
     display: flex;
     flex-direction: column;
-    padding: 1rem 1rem;
+    padding: .5rem 1rem;
     margin: .5rem 1rem 0 0;
     flex: 1;
 }
@@ -281,6 +291,36 @@ ul {
     border-bottom: 1px solid #969696;
 }
 
+.trending h3 {
+    margin-top: 1rem;
+}
+
+.trend-container {
+    background-color: #ffffff;
+    border-style: none;
+    border-radius: 8px;
+    padding: 1rem;
+    margin: .5rem 1rem 0 0;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    gap: 1rem;
+}
+
+.trend {
+    display: flex;
+    gap: 0.75rem;
+    align-items: center;
+}
+
+.trend #trend-user{
+    font-weight: 500;
+}
+
+.trend #trend-post{
+    font-size: 12px;
+}
+
 /* Profile Picture Styling */
 
 .avatar {
@@ -289,3 +329,4 @@ ul {
     width: 45px;
     border-radius: 50%;
 }
+
